--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #e2e0e1;
+  background-color: #EDECEA;
 }
 
 /* 版心 */
@@ -39,7 +39,7 @@ body {
   width: 1170px;
   padding: 10px;
   font-size: 18px;
-  background-color: whitesmoke;
+  background-color: #F7F7F5;
   border-radius: 15px;
   font-weight: bold;
 }
@@ -64,7 +64,7 @@ h1 {
   border-radius: 15px;
   margin-top: 10px;
   margin-bottom: 10px;
-  background-color: whitesmoke;
+  background-color: #F7F7F5;
 }
 
 .n-button {
@@ -76,7 +76,7 @@ h1 {
   width: 280px;
   margin-top: 10px;
   border-radius: 2em;
-  background-color: black;
+  background-color: #F1E5D9;
   padding: 10px;
 }
 
@@ -85,25 +85,30 @@ h1 {
   height: 160px;
 }
 
+.article-other {
+  background-color: #F1E5D9;
+}
+
 .article-title {
   height: 30px;
-  padding-left: 20px;
+  padding-top: 60px;
   font-size: large;
   font-weight: bold;
-  background-color: aqua;
+  /*background-color: aqua;*/
 }
 
 .article-abstract {
-  background-color: antiquewhite;
-  height: 90px;
+  /*background-color: antiquewhite;*/
+  height: 120px;
   padding-left: 20px;
 }
 
 .article-publish {
   padding-left: 140px;
   height: 30px;
-  background-color: beige;
+  /*background-color: beige;*/
 }
+
 
 .main-page {
   width: 905px;
@@ -111,18 +116,18 @@ h1 {
   padding: 10px;
   margin-top: 20px;
   font-weight: bold;
-  background-color: yellowgreen;
+  /*background-color: yellowgreen;*/
 }
 
 .container-left {
   width: 925px;
-  background-color: aqua;
+  /*background-color: aqua;*/
 }
 
 .container-right {
   width: 245px;
   height: 1182px;
-  background-color: aqua;
+  /*background-color: aqua;*/
 }
 
 .author-info {
@@ -132,7 +137,7 @@ h1 {
 .container-author-info {
   margin-top: 10px;
   border-radius: 15px;
-  background-color: #d5cba5;
+  background-color: #F7F7F5;
 }
 
 .main-article-count {
@@ -140,7 +145,7 @@ h1 {
   width: 225px;
   margin-top: 20px;
   padding: 10px;
-  background-color: aquamarine;
+  background-color: #F7F7F5;
   border-radius: 15px;
 }
 
@@ -149,7 +154,7 @@ h1 {
   /*margin-top: 0px;*/
   border-radius: 10px;
   font-weight: bold;
-  background-color: #af3d3d;
+  background-color: #F7F7F5;
   padding: 10px;
 }
 
@@ -159,15 +164,38 @@ h1 {
   margin-top: 20px;
   padding-top: 30px;
   padding-right: 20px;
-  background-color: #467c6a;
+  background-color: #F7F7F5;
   border-radius: 15px;
+}
+
+.n-badge .n-badge-sup {
+  --n-color: #D3C2A8;
 }
 
 .main-site-count {
   margin-top: 20px;
-  height: 106px;
+  height: 90px;
   width: 205px;
   /*padding: 10px;*/
-  background-color: #cc8f6f;
+  background-color: #F7F7F5;
   border-radius: 15px;
+}
+
+.footer {
+  margin-top: 70px;
+  /*height: 200px;*/
+  width: 900px;
+  /*background-color: #b54a4a;*/
+}
+
+.footer-group {
+  /*margin-top: 130px;*/
+  height: 180px;
+  /*background-color: yellow;*/
+}
+
+.shields {
+  /*background-color: #467c6a;*/
+  margin: 10px;
+  /*padding: 20px;*/
 }
